--- a/index.html
+++ b/index.html
@@ -43,25 +43,31 @@
  </div>
   <div class="result-container">
         <div class="row">
-            <div class="annul-result">
+            <div class="annul-result" style="
+    max-width: 50%;
+">
                 <h3>Annually</h3>
                 <div class="result-gross">
-                    <div >Gross</div>
+                    <div style="
+                    padding-right: 132px;">Gross</div>
                     &euro;
-                    <div id="gross">0.00</div> ;
+                    <div id="gross">0.00</div> 
                 </div>
                 <div class="result-tax">
-                    <div>Tax</div>
+                    <div style="
+                    padding-right: 132px;">Tax</div>
                     &euro;
                     <div id="annualTax">0.00</div>
                 </div>
                 <div class="result-insurance">
-                    <div>social Insurance</div>
+                    <div style="
+                    padding-right: 132px;">social</div>
                     &euro;
                     <div id="annualInsurance">0.00</div>
                 </div>
                 <div class="result-net">
-                    <div>Net</div>
+                    <div style="
+                    padding-right: 132px;">Net</div>
                     &euro;
                     <div id="annualNet">0.00</div>
                 </div>
@@ -70,22 +76,26 @@
            <div class="monthly-result">
                 <h3>Monthly</h3>
                 <div class="result-gross">
-                    <div>Gross</div>
+                    <div style="
+                    padding-right: 132px;">Gross</div>
                     &euro;
                     <div id="monthlygross">0.00</div>
                 </div>
                 <div class="result-tax">
-                    <div>Tax</div>
+                    <div style="
+                    padding-right: 132px;">Tax</div>
                     &euro;
                     <div id="monthlyTax">0.00</div> 
                 </div>
                 <div class="result-insurance">
-                    <div>social Insurance</div>
+                    <div style="
+                    padding-right: 132px;">social</div>
                     &euro;
                     <div id="monthlyInsurance">0.00</div>
                 </div>
                 <div class="result-net">
-                    <div>Net</div>
+                    <div style="
+                    padding-right: 132px;">Net</div>
                     &euro;
                     <div id="monthlyNet">0.00</div>
                 </div>
