some css chnging

--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <title>cyprus tax calculator</title>
 </head>
 <body>
-    <main>
     <div class="header">
-        <h1>
+           <h1>
             <img class="logo" src="ctc.png" alt="logo" />
             Cyprus Tax Calculator</h1>
-   </div>
- <div class="salary-input">
+    </div>
+ <main>
+    
+<div class="salary-input">
     <div class="choose-time">
      <div class="choose-annual">
        <select id="sel">
@@ -44,8 +45,8 @@
   <div class="result-container">
         <div class="row">
             <div class="annul-result" style="
-    max-width: 50%;
-">
+                    max-width: 50%; "></div>
+                   
                 <h3>Annually</h3>
                 <div class="result-gross">
                     <div style="
